[package]
name = "actix-proxy"
version = "0.1.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.rst"
description = "Trait for converting actix_web::client::ClientResponse to actix_web::HttpResponse"
homepage = "https://github.com/jofas/actix_proxy"
repository = "https://github.com/jofas/actix_proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^3.3.2", features = ["openssl"] }
actix-rt = "^1.1.1"
openssl = { version = "^0.10.32", features = ["v110"] }
futures = "^0.3.13"
