[package]
name = "actix-proxy"
version = "0.1.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Trait for converting actix_web::client::ClientResponse to actix_web::HttpResponse"
repository = "https://github.com/jofas/actix_proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.3.0" }
awc = { version = "^3.1.0", features = ["openssl"] }
openssl = { version = "^0.10.32" }
