[package]
name = "actix-proxy"
version = "0.2.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Glue code for using awc with actix-web"
keywords = ["awc", "actix-web", "actix"]
repository = "https://github.com/jofas/actix_proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.5.1" }
awc = { version = "^3.4.0" }

[dev-dependencies]
awc = { version = "^3.4.0", features = ["openssl"] }
futures-util = "^0.3.30"
openssl = { version = "^0.10.63" }
